Etapa3/y.output
Terminals unused in grammar

   TOKEN_ERROR


State 14 conflicts: 1 reduce/reduce
State 61 conflicts: 1 shift/reduce
State 81 conflicts: 1 reduce/reduce
State 82 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 13 shift/reduce
State 128 conflicts: 17 reduce/reduce
State 130 conflicts: 17 reduce/reduce
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: listaDeDeclaracoes

    2 listaDeDeclaracoes: declaracoes listaDeDeclaracoes
    3                   | %empty

    4 declaracoes: tipo TK_IDENTIFIER '=' literal ';'
    5            | tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';'
    6            | tipo '#' TK_IDENTIFIER ';'
    7            | tipo '#' TK_IDENTIFIER '=' literal ';'
    8            | tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco

    9 inicializacao: ':' inicializacao2
   10              | %empty

   11 inicializacao2: literal inicializacao2
   12               | %empty

   13 tipo: KW_CHAR
   14     | KW_INT
   15     | KW_FLOAT

   16 literal: LIT_CHAR
   17        | LIT_INTEGER
   18        | LIT_REAL
   19        | LIT_STRING

   20 listaDeParametros: parametro fimDeParametros
   21                  | %empty

   22 fimDeParametros: ',' parametro fimDeParametros
   23                | %empty

   24 parametro: tipo TK_IDENTIFIER
   25          | %empty

   26 bloco: '{' blocoDeComandos '}'

   27 blocoDeComandos: comando fimDeComando

   28 fimDeComando: ';' comando fimDeComando
   29             | %empty

   30 comando: atribuicao
   31        | controleFluxo
   32        | KW_PRINT argprint
   33        | KW_READ TK_IDENTIFIER
   34        | bloco
   35        | KW_RETURN expressao
   36        | %empty

   37 atribuicao: TK_IDENTIFIER '=' expressao
   38           | TK_IDENTIFIER '=' '#' expressao
   39           | TK_IDENTIFIER '=' '&' expressao
   40           | TK_IDENTIFIER '[' expressao ']' '=' expressao

   41 argprint: expressao argprint2

   42 argprint2: expressao argprint2
   43          | %empty

   44 listaDeArgumentos: argfunc fimDeArgumentos
   45                  | %empty

   46 fimDeArgumentos: ',' argfunc fimDeArgumentos
   47                | %empty

   48 argfunc: expressao
   49        | %empty

   50 expressao: TK_IDENTIFIER
   51          | '#' TK_IDENTIFIER
   52          | '&' TK_IDENTIFIER
   53          | TK_IDENTIFIER '[' expressao ']'
   54          | TK_IDENTIFIER '(' listaDeArgumentos ')'
   55          | '(' expressao ')'
   56          | expressao OPERATOR_LE expressao
   57          | expressao OPERATOR_GE expressao
   58          | expressao OPERATOR_EQ expressao
   59          | expressao OPERATOR_NE expressao
   60          | expressao OPERATOR_AND expressao
   61          | expressao OPERATOR_OR expressao
   62          | expressao '>' expressao
   63          | expressao '<' expressao
   64          | expressao '+' expressao
   65          | expressao '-' expressao
   66          | expressao '/' expressao
   67          | expressao '*' expressao
   68          | expressao '%' expressao
   69          | '!' expressao
   70          | LIT_CHAR
   71          | LIT_INTEGER
   72          | LIT_STRING

   73 controleFluxo: KW_IF '(' expressao ')' KW_THEN comando
   74              | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando
   75              | KW_WHILE '(' expressao ')' comando
   76              | KW_FOR '(' atribuicao KW_TO expressao ')' comando


Terminals, with rules where they appear

$end (0) 0
'!' (33) 69
'#' (35) 6 7 38 51
'%' (37) 68
'&' (38) 39 52
'(' (40) 8 54 55 73 74 75 76
')' (41) 8 54 55 73 74 75 76
'*' (42) 67
'+' (43) 64
',' (44) 22 46
'-' (45) 65
'/' (47) 66
':' (58) 9
';' (59) 4 5 6 7 28
'<' (60) 63
'=' (61) 4 7 37 38 39 40
'>' (62) 62
'[' (91) 5 40 53
']' (93) 5 40 53
'{' (123) 26
'}' (125) 26
KW_CHAR (256) 13
KW_INT (257) 14
KW_FLOAT (259) 15
KW_IF (261) 73 74
KW_THEN (262) 73 74
KW_ELSE (263) 74
KW_WHILE (264) 75
KW_FOR (265) 76
KW_READ (266) 33
KW_PRINT (267) 32
KW_RETURN (268) 35
KW_TO (269) 76
OPERATOR_LE (270) 56
OPERATOR_GE (271) 57
OPERATOR_EQ (272) 58
OPERATOR_NE (273) 59
OPERATOR_AND (274) 60
OPERATOR_OR (275) 61
TK_IDENTIFIER (280) 4 5 6 7 8 24 33 37 38 39 40 50 51 52 53 54
LIT_INTEGER (281) 5 17 71
LIT_REAL (282) 18
LIT_CHAR (283) 16 70
LIT_STRING (284) 19 72
TOKEN_ERROR (290)
error (291)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
programa (48)
    on left: 1, on right: 0
listaDeDeclaracoes (49)
    on left: 2 3, on right: 1 2
declaracoes (50)
    on left: 4 5 6 7 8, on right: 2
inicializacao (51)
    on left: 9 10, on right: 5
inicializacao2 (52)
    on left: 11 12, on right: 9 11
tipo (53)
    on left: 13 14 15, on right: 4 5 6 7 8 24
literal (54)
    on left: 16 17 18 19, on right: 4 7 11
listaDeParametros (55)
    on left: 20 21, on right: 8
fimDeParametros (56)
    on left: 22 23, on right: 20 22
parametro (57)
    on left: 24 25, on right: 20 22
bloco (58)
    on left: 26, on right: 8 34
blocoDeComandos (59)
    on left: 27, on right: 26
fimDeComando (60)
    on left: 28 29, on right: 27 28
comando (61)
    on left: 30 31 32 33 34 35 36, on right: 27 28 73 74 75 76
atribuicao (62)
    on left: 37 38 39 40, on right: 30 76
argprint (63)
    on left: 41, on right: 32
argprint2 (64)
    on left: 42 43, on right: 41 42
listaDeArgumentos (65)
    on left: 44 45, on right: 54
fimDeArgumentos (66)
    on left: 46 47, on right: 44 46
argfunc (67)
    on left: 48 49, on right: 44 46
expressao (68)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72, on right: 35 37 38 39 40 41 42 48 53 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 73 74 75 76
controleFluxo (69)
    on left: 73 74 75 76, on right: 31


State 0

    0 $accept: . programa $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (listaDeDeclaracoes)

    programa            go to state 4
    listaDeDeclaracoes  go to state 5
    declaracoes         go to state 6
    tipo                go to state 7


State 1

   13 tipo: KW_CHAR .

    $default  reduce using rule 13 (tipo)


State 2

   14 tipo: KW_INT .

    $default  reduce using rule 14 (tipo)


State 3

   15 tipo: KW_FLOAT .

    $default  reduce using rule 15 (tipo)


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 8


State 5

    1 programa: listaDeDeclaracoes .

    $default  reduce using rule 1 (programa)


State 6

    2 listaDeDeclaracoes: declaracoes . listaDeDeclaracoes

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (listaDeDeclaracoes)

    listaDeDeclaracoes  go to state 9
    declaracoes         go to state 6
    tipo                go to state 7


State 7

    4 declaracoes: tipo . TK_IDENTIFIER '=' literal ';'
    5            | tipo . TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';'
    6            | tipo . '#' TK_IDENTIFIER ';'
    7            | tipo . '#' TK_IDENTIFIER '=' literal ';'
    8            | tipo . TK_IDENTIFIER '(' listaDeParametros ')' bloco

    TK_IDENTIFIER  shift, and go to state 10
    '#'            shift, and go to state 11


State 8

    0 $accept: programa $end .

    $default  accept


State 9

    2 listaDeDeclaracoes: declaracoes listaDeDeclaracoes .

    $default  reduce using rule 2 (listaDeDeclaracoes)


State 10

    4 declaracoes: tipo TK_IDENTIFIER . '=' literal ';'
    5            | tipo TK_IDENTIFIER . '[' LIT_INTEGER ']' inicializacao ';'
    8            | tipo TK_IDENTIFIER . '(' listaDeParametros ')' bloco

    '='  shift, and go to state 12
    '['  shift, and go to state 13
    '('  shift, and go to state 14


State 11

    6 declaracoes: tipo '#' . TK_IDENTIFIER ';'
    7            | tipo '#' . TK_IDENTIFIER '=' literal ';'

    TK_IDENTIFIER  shift, and go to state 15


State 12

    4 declaracoes: tipo TK_IDENTIFIER '=' . literal ';'

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    literal  go to state 20


State 13

    5 declaracoes: tipo TK_IDENTIFIER '[' . LIT_INTEGER ']' inicializacao ';'

    LIT_INTEGER  shift, and go to state 21


State 14

    8 declaracoes: tipo TK_IDENTIFIER '(' . listaDeParametros ')' bloco

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    ')'       reduce using rule 21 (listaDeParametros)
    ')'       [reduce using rule 25 (parametro)]
    ','       reduce using rule 25 (parametro)
    $default  reduce using rule 21 (listaDeParametros)

    tipo               go to state 22
    listaDeParametros  go to state 23
    parametro          go to state 24


State 15

    6 declaracoes: tipo '#' TK_IDENTIFIER . ';'
    7            | tipo '#' TK_IDENTIFIER . '=' literal ';'

    '='  shift, and go to state 25
    ';'  shift, and go to state 26


State 16

   17 literal: LIT_INTEGER .

    $default  reduce using rule 17 (literal)


State 17

   18 literal: LIT_REAL .

    $default  reduce using rule 18 (literal)


State 18

   16 literal: LIT_CHAR .

    $default  reduce using rule 16 (literal)


State 19

   19 literal: LIT_STRING .

    $default  reduce using rule 19 (literal)


State 20

    4 declaracoes: tipo TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 27


State 21

    5 declaracoes: tipo TK_IDENTIFIER '[' LIT_INTEGER . ']' inicializacao ';'

    ']'  shift, and go to state 28


State 22

   24 parametro: tipo . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 29


State 23

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros . ')' bloco

    ')'  shift, and go to state 30


State 24

   20 listaDeParametros: parametro . fimDeParametros

    ','  shift, and go to state 31

    $default  reduce using rule 23 (fimDeParametros)

    fimDeParametros  go to state 32


State 25

    7 declaracoes: tipo '#' TK_IDENTIFIER '=' . literal ';'

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    literal  go to state 33


State 26

    6 declaracoes: tipo '#' TK_IDENTIFIER ';' .

    $default  reduce using rule 6 (declaracoes)


State 27

    4 declaracoes: tipo TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 4 (declaracoes)


State 28

    5 declaracoes: tipo TK_IDENTIFIER '[' LIT_INTEGER ']' . inicializacao ';'

    ':'  shift, and go to state 34

    $default  reduce using rule 10 (inicializacao)

    inicializacao  go to state 35


State 29

   24 parametro: tipo TK_IDENTIFIER .

    $default  reduce using rule 24 (parametro)


State 30

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros ')' . bloco

    '{'  shift, and go to state 36

    bloco  go to state 37


State 31

   22 fimDeParametros: ',' . parametro fimDeParametros

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 25 (parametro)

    tipo       go to state 22
    parametro  go to state 38


State 32

   20 listaDeParametros: parametro fimDeParametros .

    $default  reduce using rule 20 (listaDeParametros)


State 33

    7 declaracoes: tipo '#' TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 39


State 34

    9 inicializacao: ':' . inicializacao2

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    $default  reduce using rule 12 (inicializacao2)

    inicializacao2  go to state 40
    literal         go to state 41


State 35

    5 declaracoes: tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao . ';'

    ';'  shift, and go to state 42


State 36

   26 bloco: '{' . blocoDeComandos '}'

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_PRINT       shift, and go to state 47
    KW_RETURN      shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 36

    $default  reduce using rule 36 (comando)

    bloco            go to state 50
    blocoDeComandos  go to state 51
    comando          go to state 52
    atribuicao       go to state 53
    controleFluxo    go to state 54


State 37

    8 declaracoes: tipo TK_IDENTIFIER '(' listaDeParametros ')' bloco .

    $default  reduce using rule 8 (declaracoes)


State 38

   22 fimDeParametros: ',' parametro . fimDeParametros

    ','  shift, and go to state 31

    $default  reduce using rule 23 (fimDeParametros)

    fimDeParametros  go to state 55


State 39

    7 declaracoes: tipo '#' TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 7 (declaracoes)


State 40

    9 inicializacao: ':' inicializacao2 .

    $default  reduce using rule 9 (inicializacao)


State 41

   11 inicializacao2: literal . inicializacao2

    LIT_INTEGER  shift, and go to state 16
    LIT_REAL     shift, and go to state 17
    LIT_CHAR     shift, and go to state 18
    LIT_STRING   shift, and go to state 19

    $default  reduce using rule 12 (inicializacao2)

    inicializacao2  go to state 56
    literal         go to state 41


State 42

    5 declaracoes: tipo TK_IDENTIFIER '[' LIT_INTEGER ']' inicializacao ';' .

    $default  reduce using rule 5 (declaracoes)


State 43

   73 controleFluxo: KW_IF . '(' expressao ')' KW_THEN comando
   74              | KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando

    '('  shift, and go to state 57


State 44

   75 controleFluxo: KW_WHILE . '(' expressao ')' comando

    '('  shift, and go to state 58


State 45

   76 controleFluxo: KW_FOR . '(' atribuicao KW_TO expressao ')' comando

    '('  shift, and go to state 59


State 46

   33 comando: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 60


State 47

   32 comando: KW_PRINT . argprint

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    argprint   go to state 69
    expressao  go to state 70


State 48

   35 comando: KW_RETURN . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 71


State 49

   37 atribuicao: TK_IDENTIFIER . '=' expressao
   38           | TK_IDENTIFIER . '=' '#' expressao
   39           | TK_IDENTIFIER . '=' '&' expressao
   40           | TK_IDENTIFIER . '[' expressao ']' '=' expressao

    '='  shift, and go to state 72
    '['  shift, and go to state 73


State 50

   34 comando: bloco .

    $default  reduce using rule 34 (comando)


State 51

   26 bloco: '{' blocoDeComandos . '}'

    '}'  shift, and go to state 74


State 52

   27 blocoDeComandos: comando . fimDeComando

    ';'  shift, and go to state 75

    $default  reduce using rule 29 (fimDeComando)

    fimDeComando  go to state 76


State 53

   30 comando: atribuicao .

    $default  reduce using rule 30 (comando)


State 54

   31 comando: controleFluxo .

    $default  reduce using rule 31 (comando)


State 55

   22 fimDeParametros: ',' parametro fimDeParametros .

    $default  reduce using rule 22 (fimDeParametros)


State 56

   11 inicializacao2: literal inicializacao2 .

    $default  reduce using rule 11 (inicializacao2)


State 57

   73 controleFluxo: KW_IF '(' . expressao ')' KW_THEN comando
   74              | KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 77


State 58

   75 controleFluxo: KW_WHILE '(' . expressao ')' comando

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 78


State 59

   76 controleFluxo: KW_FOR '(' . atribuicao KW_TO expressao ')' comando

    TK_IDENTIFIER  shift, and go to state 49

    atribuicao  go to state 79


State 60

   33 comando: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 33 (comando)


State 61

   50 expressao: TK_IDENTIFIER .
   53          | TK_IDENTIFIER . '[' expressao ']'
   54          | TK_IDENTIFIER . '(' listaDeArgumentos ')'

    '['  shift, and go to state 80
    '('  shift, and go to state 81

    '('       [reduce using rule 50 (expressao)]
    $default  reduce using rule 50 (expressao)


State 62

   71 expressao: LIT_INTEGER .

    $default  reduce using rule 71 (expressao)


State 63

   70 expressao: LIT_CHAR .

    $default  reduce using rule 70 (expressao)


State 64

   72 expressao: LIT_STRING .

    $default  reduce using rule 72 (expressao)


State 65

   69 expressao: '!' . expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 82


State 66

   51 expressao: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 83


State 67

   55 expressao: '(' . expressao ')'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 84


State 68

   52 expressao: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 85


State 69

   32 comando: KW_PRINT argprint .

    $default  reduce using rule 32 (comando)


State 70

   41 argprint: expressao . argprint2
   56 expressao: expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_NE expressao
   60          | expressao . OPERATOR_AND expressao
   61          | expressao . OPERATOR_OR expressao
   62          | expressao . '>' expressao
   63          | expressao . '<' expressao
   64          | expressao . '+' expressao
   65          | expressao . '-' expressao
   66          | expressao . '/' expressao
   67          | expressao . '*' expressao
   68          | expressao . '%' expressao

    OPERATOR_LE    shift, and go to state 86
    OPERATOR_GE    shift, and go to state 87
    OPERATOR_EQ    shift, and go to state 88
    OPERATOR_NE    shift, and go to state 89
    OPERATOR_AND   shift, and go to state 90
    OPERATOR_OR    shift, and go to state 91
    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '<'            shift, and go to state 92
    '>'            shift, and go to state 93
    '!'            shift, and go to state 65
    '+'            shift, and go to state 94
    '-'            shift, and go to state 95
    '*'            shift, and go to state 96
    '/'            shift, and go to state 97
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68
    '%'            shift, and go to state 98

    $default  reduce using rule 43 (argprint2)

    argprint2  go to state 99
    expressao  go to state 100


State 71

   35 comando: KW_RETURN expressao .
   56 expressao: expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_NE expressao
   60          | expressao . OPERATOR_AND expressao
   61          | expressao . OPERATOR_OR expressao
   62          | expressao . '>' expressao
   63          | expressao . '<' expressao
   64          | expressao . '+' expressao
   65          | expressao . '-' expressao
   66          | expressao . '/' expressao
   67          | expressao . '*' expressao
   68          | expressao . '%' expressao

    OPERATOR_LE   shift, and go to state 86
    OPERATOR_GE   shift, and go to state 87
    OPERATOR_EQ   shift, and go to state 88
    OPERATOR_NE   shift, and go to state 89
    OPERATOR_AND  shift, and go to state 90
    OPERATOR_OR   shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    '%'           shift, and go to state 98

    $default  reduce using rule 35 (comando)


State 72

   37 atribuicao: TK_IDENTIFIER '=' . expressao
   38           | TK_IDENTIFIER '=' . '#' expressao
   39           | TK_IDENTIFIER '=' . '&' expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 101
    '('            shift, and go to state 67
    '&'            shift, and go to state 102

    expressao  go to state 103


State 73

   40 atribuicao: TK_IDENTIFIER '[' . expressao ']' '=' expressao

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 62
    LIT_CHAR       shift, and go to state 63
    LIT_STRING     shift, and go to state 64
    '!'            shift, and go to state 65
    '#'            shift, and go to state 66
    '('            shift, and go to state 67
    '&'            shift, and go to state 68

    expressao  go to state 104


State 74

   26 bloco: '{' blocoDeComandos '}' .

    $default  reduce using rule 26 (bloco)


State 75

   28 fimDeComando: ';' . comando fimDeComando

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_PRINT       shift, and go to state 47
    KW_RETURN      shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 36

    $default  reduce using rule 36 (comando)

    bloco          go to state 50
    comando        go to state 105
    atribuicao     go to state 53
    controleFluxo  go to state 54


State 76

   27 blocoDeComandos: comando fimDeComando .

    $default  reduce using rule 27 (blocoDeComandos)


State 77

   56 expressao: expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_NE expressao
   60          | expressao . OPERATOR_AND expressao
   61          | expressao . OPERATOR_OR expressao
   62          | expressao . '>' expressao
   63          | expressao . '<' expressao
   64          | expressao . '+' expressao
   65          | expressao . '-' expressao
   66          | expressao . '/' expressao
   67          | expressao . '*' expressao
   68          | expressao . '%' expressao
   73 controleFluxo: KW_IF '(' expressao . ')' KW_THEN comando
   74              | KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando

    OPERATOR_LE   shift, and go to state 86
    OPERATOR_GE   shift, and go to state 87
    OPERATOR_EQ   shift, and go to state 88
    OPERATOR_NE   shift, and go to state 89
    OPERATOR_AND  shift, and go to state 90
    OPERATOR_OR   shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    ')'           shift, and go to state 106
    '%'           shift, and go to state 98


State 78

   56 expressao: expressao . OPERATOR_LE expressao
   57          | expressao . OPERATOR_GE expressao
   58          | expressao . OPERATOR_EQ expressao
   59          | expressao . OPERATOR_NE expressao
   60          | expressao . OPERATOR_AND expressao
   61          | expressao . OPERATOR_OR expressao
   62          | expressao . '>' expressao
   63          | expressao . '<' expressao
   64          | expressao . '+' expressao
   65          | expressao . '-' expressao
   66          | expressao . '/' expressao
   67          | expressao . '*' expressao
   68          | expressao . '%' expressao
   75 controleFluxo: KW_WHILE '(' expressao . ')' comando

    OPERATOR_LE   shift, and go to state 86
    OPERATOR_GE   shift, and go to state 87
    OPERATOR_EQ   shift, and go to state 88
    OPERATOR_NE   shift, and go to state 89
    OPERATOR_AND  shift, and go to state 90
    OPERATOR_OR   shift, and go to state 91
    '<'           shift, and go to state 92
    '>'           shift, and go to state 93
    '+'           shift, and go to state 94
    '-'           shift, and go to state 95
    '*'           shift, and go to state 96
    '/'           shift, and go to state 97
    ')'           shift, and go to state 107
    '%'           shift, and go to state 98


State 79

   76 controleFluxo: KW_FOR '(' atribuicao . KW_TO expressao ')' comando

    KW_TO  shift, and go to state 108


State 80

   53 expressao: TK_IDENTIFIER '[' . expressao ']'
